--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,23 +41,10 @@
             </mat-list-item>
             <mat-expansion-panel [class.mat-elevation-z0]="true">
                 <mat-expansion-panel-header>
-                    Mobile Phone
+                    Cadastro
                 </mat-expansion-panel-header>
                 <mat-nav-list>
-                    <a mat-list-item routerLink="#">
-                        <mat-icon>apple</mat-icon><span>iOS</span>
-                    </a>
-                    <a mat-list-item routerLink="#">
-                        <mat-icon>android</mat-icon><span>Android</span>
-                    </a>
-                </mat-nav-list>
-            </mat-expansion-panel>
-            <mat-expansion-panel [class.mat-elevation-z0]="true">
-                <mat-expansion-panel-header>
-                    Frameworks
-                </mat-expansion-panel-header>
-                <mat-nav-list>
-                    <a mat-list-item routerLink="/vehicle">Spring</a>
+                    <a mat-list-item routerLink="/vehicle">Veiculo</a>
                     <a mat-list-item routerLink="#">Hibernate</a>
                     <a mat-list-item routerLink="#">Struts</a>
                 </mat-nav-list>
