--- a/src/app/components/vehicle/vehicle.component.html
+++ b/src/app/components/vehicle/vehicle.component.html
@@ -1,49 +1,48 @@
-<div style="display: flex; justify-content: center; align-items: center; height: 90vh; width: 99%;">
-
+<div class="page-container">  
+  
   <mat-card>
     <mat-card-header>
       <mat-card-title>Veiculos</mat-card-title>
     </mat-card-header>
-
     <mat-card-content>
+      <mat-progress-spinner mode="indeterminate"  *ngIf="showSpinner" class="spinner"></mat-progress-spinner>
       <div class="input-container">
         <mat-form-field class="input-field">
           <mat-label>Marca</mat-label>
-          <input matInput placeholder="Enter your name">
+          <input matInput  [(ngModel)]="filterBrand">
         </mat-form-field>
 
         <mat-form-field class="input-field">
           <mat-label>Modelo</mat-label>
-          <input matInput type="email" placeholder="Enter your email">
+          <input matInput type="email"  [(ngModel)]="filterModel">
         </mat-form-field>
 
         <mat-form-field class="input-field">
           <mat-label>Ano</mat-label>
-          <input matInput type="tel" placeholder="Enter your phone name">
+          <input matInput type="text"  [(ngModel)]="filterYear">
         </mat-form-field>
 
         <mat-form-field class="input-field">
           <mat-label>Número Chassi</mat-label>
-          <input matInput placeholder="Enter your username">
+          <input matInput >
         </mat-form-field>
 
         <mat-form-field class="input-field">
           <mat-label>Cor</mat-label>
-          <input matInput type="text" placeholder="Enter your password">
+          <input matInput type="text" >
         </mat-form-field>
 
-        <mat-form-field class="input-field">
-          <mat-label>Cor</mat-label>
-          <input matInput type="text" placeholder="Enter your password">
-        </mat-form-field>
+        <div class="button-row" fxLayout="row" fxLayoutAlign="space-between">
+          <button mat-raised-button class="responsive-button" (click)="cleanFilter()" color="primary">Limpar</button>
+          <button mat-raised-button class="responsive-button" (click)="filterVehicle()" color="primary">Filtrar</button>
+      </div>
       </div>
 
       <div style="margin-top: 2%;">
-
         <section>
-          <div class="example-button-row">
-            <button mat-raised-button class="responsive-button" (click)="openDialog()" color="primary">Novo</button>
-            <button mat-raised-button class="responsive-button" color="accent">Excluir</button>
+          <div class="button-row">
+            <button mat-raised-button class="responsive-button" (click)="openDialogVehicle(true)"
+              color="primary">Novo</button>
           </div>
         </section>
         <div class="table-container">
@@ -51,47 +50,50 @@
 
             <table mat-table [dataSource]="dataSource">
 
-              <!-- Position Column -->
               <ng-container matColumnDef="id">
                 <th mat-header-cell *matHeaderCellDef> Id </th>
                 <td mat-cell *matCellDef="let element"> {{element.id}} </td>
               </ng-container>
 
-              <!-- Name Column -->
-              <ng-container matColumnDef="name">
+              <ng-container matColumnDef="brand">
                 <th mat-header-cell *matHeaderCellDef> Marca </th>
-                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.brand}} </td>
               </ng-container>
 
-              <!-- Weight Column -->
-              <ng-container matColumnDef="weight">
-                <th mat-header-cell *matHeaderCellDef> Ano </th>
-                <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+              <ng-container matColumnDef="model">
+                <th mat-header-cell *matHeaderCellDef>Modelo</th>
+                <td mat-cell *matCellDef="let element"> {{element.model}} </td>
               </ng-container>
 
-              <!-- Symbol Column -->
-              <ng-container matColumnDef="symbol">
-                <th mat-header-cell *matHeaderCellDef> Número Chassi </th>
-                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+              <ng-container matColumnDef="year">
+                <th mat-header-cell *matHeaderCellDef>Ano Fabricação</th>
+                <td mat-cell *matCellDef="let element"> {{element.yearVehicle}} </td>
               </ng-container>
 
               <ng-container matColumnDef="color">
-                <th mat-header-cell *matHeaderCellDef>Cor </th>
-                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+                <th mat-header-cell *matHeaderCellDef  >Cor</th>
+                <td mat-cell *matCellDef="let element" > {{element.color}} </td>
               </ng-container>
 
+              
               <ng-container matColumnDef="update">
                 <th mat-header-cell *matHeaderCellDef>Atualizar </th>
-                <td mat-cell *matCellDef="let element"><mat-icon>edit</mat-icon> </td>
+                <td mat-cell *matCellDef="let element" (click)="openDialogVehicle(false,element)">
+                  <mat-icon>edit</mat-icon>
+                </td>
               </ng-container>
 
-
+              <ng-container matColumnDef="delete">
+                <th mat-header-cell *matHeaderCellDef>Excluir </th>
+                <td mat-cell *matCellDef="let element" (click)="deleteVehicle(element.id)">
+                  <mat-icon style="color: red;">delete</mat-icon>
+                </td>
+              </ng-container>
 
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
           </div>
-
         </div>
         <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
           aria-label="Select page of periodic elements">
