--- a/src/app/components/vehicle/vehicle.component.scss
+++ b/src/app/components/vehicle/vehicle.component.scss
@@ -1,112 +1,57 @@
-.example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-  }
-  
-  .example-full-width {
-    width: 100%;
-  }
+.input-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+}
 
-  .input-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 16px;
-  }
-  
-  .input-field {
-    flex: 1;
-    min-width: 200px;
-    max-width: 300px;
-  }
+.input-field {
+  flex: 1;
+  min-width: 200px;
+  max-width: 300px;
+}
 
-  table {
-    width: 100%;
-  }
+table {
+  width: 100%;
+}
 
-  .demo-table {
-    width: 100%;
-  }
+.button-row {
+  display: table-cell;
+  max-width: 600px;
+}
 
-  section {
-    display: table;
-  }
-  
-  .example-label {
-    display: table-cell;
-    font-size: 14px;
-    margin-left: 8px;
-    min-width: 120px;
-  }
-  
-  .example-button-row {
-    display: table-cell;
-    max-width: 600px;
-  }
-  
-  .example-button-row .mat-mdc-button-base {
-    margin: 8px 8px 8px 0;
-  }
-  
-  .example-flex-container {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
-  
-  .example-button-container {
-    display: flex;
-    justify-content: center;
-    width: 120px;
-  }
+.button-row .mat-mdc-button-base {
+  margin: 8px 8px 8px 0;
+}
 
-  section {
-    display: table;
-  }
-  
-  .example-label {
-    display: table-cell;
-    font-size: 14px;
-    margin-left: 8px;
-    min-width: 120px;
-  }
-  
-  
-  .example-button-row .mat-mdc-button-base {
-    margin: 8px 8px 8px 0;
-  }
-  
-  .example-flex-container {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
-  
-  .example-button-container {
-    display: flex;
-    justify-content: center;
-    width: 120px;
-  }
+section {
+  display: table;
+}
 
-  
-  
-  .responsive-button {
-    flex: 1;
-    margin: 8px;
-    min-width: 120px; /* Adjust the minimum width as needed */
-    max-width: 200px; /* Adjust the maximum width as needed */
-  }
+.button-row .mat-mdc-button-base {
+  margin: 8px 8px 8px 0;
+}
 
-  .example-button-row {
-    display: flex;
-    justify-content: flex-end; /* Align items to the right */
-    align-items: center; /* Vertically center-align the buttons */
-  }
+.responsive-button {
+  flex: 1;
+  margin: 8px;
+  min-width: 120px;
+  max-width: 200px;
+}
 
-  th.mat-sort-header-sorted {
-    color: black;
-  }
+th.mat-sort-header-sorted {
+  color: black;
+}
 
-  .left-align {
-    text-align: left;
-  }
+.left-align {
+  text-align: left;
+}
+
+.spinner {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  align-items: center;
+}
