--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,4 +12,12 @@ $custom-theme: mat-light-theme($custom-app-primary,$custom-app-secondary,$custom
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+.page-container{
+    display: flex;
+     justify-content: center; 
+     align-items: center; 
+     height: 90vh; 
+     width: 99%;
+}
+
 
