--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,17 +36,15 @@
 <mat-sidenav-container class="app-container">
     <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav">
         <mat-nav-list>
-            <mat-list-item routerLink="#">
+            <mat-list-item routerLink="/dashboard">
                 <mat-icon>dashboard</mat-icon><span>Dashboard</span>
             </mat-list-item>
-            <mat-expansion-panel [class.mat-elevation-z0]="true">
+            <mat-expansion-panel [class.mat-elevation-z0]="true"> 
                 <mat-expansion-panel-header>
                     Cadastro
                 </mat-expansion-panel-header>
                 <mat-nav-list>
                     <a mat-list-item routerLink="/vehicle">Veiculo</a>
-                    <a mat-list-item routerLink="#">Hibernate</a>
-                    <a mat-list-item routerLink="#">Struts</a>
                 </mat-nav-list>
             </mat-expansion-panel>
         </mat-nav-list>
