--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-    <button mat-icon-button (click)="sidenav.toggle()" matTooltip="Menu">
+    <button mat-icon-button (click)="sidenav.toggle()" matTooltip="Menu" >
         <mat-icon>menu</mat-icon>
     </button>
     <span>Revizia Project</span>
@@ -34,7 +34,7 @@
 </mat-toolbar>
 
 <mat-sidenav-container class="app-container">
-    <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav">
+    <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav" opened>
         <mat-nav-list>
             <mat-list-item routerLink="/dashboard">
                 <mat-icon>dashboard</mat-icon><span>Dashboard</span>
