--- a/src/app/components/vehicle/vehicle.component.html
+++ b/src/app/components/vehicle/vehicle.component.html
@@ -19,7 +19,7 @@
 
         <mat-form-field class="input-field">
           <mat-label>Ano</mat-label>
-          <input matInput type="text" [(ngModel)]="filterYear">
+          <input matInput type="number" [(ngModel)]="filterYear">
         </mat-form-field>
 
         <mat-form-field class="input-field">
