--- a/src/app/components/vehicle/modal-vehicle/modal-vehicle.component.html
+++ b/src/app/components/vehicle/modal-vehicle/modal-vehicle.component.html
@@ -20,7 +20,7 @@
   
       <mat-form-field class="input-field">
         <mat-label>Ano</mat-label>
-        <input matInput type="tel" placeholder="Enter your phone name" formControlName="yearVehicle">
+        <input matInput type="number" placeholder="Enter your phone name" formControlName="yearVehicle">
       </mat-form-field>
   
       <mat-form-field class="input-field">
