--- a/src/app/components/vehicle/modal-vehicle/modal-vehicle.component.scss
+++ b/src/app/components/vehicle/modal-vehicle/modal-vehicle.component.scss
@@ -59,6 +59,8 @@ th.mat-sort-header-sorted {
 .header {
   text-align: center;
   padding: 10px;
+  color: white;
+  background-color: rgb(0, 102, 255);
 }
 
 .page-containerss{
@@ -67,3 +69,8 @@ th.mat-sort-header-sorted {
   align-items: center;
   height: 48vh;
 }
+
+
+
+
+
