--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,3 +25,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 
 
+.mat-dialog-container {
+    background-color: rgb(243, 243, 243); /* Substitua pela cor desejada */
+    
+  }
